# coverage-tool

./: .gitignore  CMakeLists.txt  cov_runtime.h  main.cpp  test.cpp
